@@ -1,3 +1,8 @@
+Sat Sep 18 22:24:15 1999  Owen Taylor  <otaylor@redhat.com>
+
+	* gdk/gdkcc.c: Stop leaking the color_hash all over
+	the place. Simplify and improve the logic.
+
 Sat Sep 18 21:27:40 1999  Owen Taylor  <otaylor@redhat.com>
 
 	* gtk/gtkwindow.c: Try to behave sensibly if 
